# rust_rdrand

./: Cargo.toml  README.mkd
.cargo/: config.toml
.github/workflows/: rdrand.yml
benches/: rdrand.rs
src/: changelog.rs  errors.rs  lib.rs
