[package]
name = "rdrand"
version = "0.8.3"
authors = ["Simonas Kazlauskas <rdrand@kazlauskas.me>"]
description = "An implementation of random number generator based on rdrand and rdseed instructions"
keywords = ["rand", "rdrand", "rdseed", "random"]
license = "ISC"
repository = "https://github.com/nagisa/rust_rdrand/"
documentation = "https://docs.rs/rdrand/0.8.2/"
edition = "2024"
rust-version = "1.86.0"

[[bench]]
name = "rdrand"
harness = false

[features]
tests_fail_if_unsupported = []
no_std = ["dep:notstd_detect"]

[dependencies]
rand_core = { version = "0.10", default-features = false }

[target.'cfg(target_arch = "aarch64")'.dependencies]
notstd_detect = { version = "0.6.0", optional = true }

[dev-dependencies]
criterion = "0.8"
rand = "0.10.0"
