[package]
name = "rdrand"
version = "0.8.3"
authors = ["Simonas Kazlauskas <rdrand@kazlauskas.me>"]
description = "An implementation of random number generator based on rdrand and rdseed instructions"
keywords = ["rand", "rdrand", "rdseed", "random"]
license = "ISC"
repository = "https://github.com/nagisa/rust_rdrand/"
documentation = "https://docs.rs/rdrand/0.8.2/"
edition = "2024"
rust-version = "1.86.0"

[[bench]]
name = "rdrand"
harness = false

[dependencies]
rand_core = { version = "0.10", default-features = false }

[target.'cfg(any(target_os = "linux", target_os = "openbsd", target_os = "android"))'.dependencies]
libc = "0.2.185"

[dev-dependencies]
criterion = "0.8"
rand = "0.10.0"
